evaluation/test_suite/positive/ub18/3.c
#include <stdio.h>
int main()
{
    int* p = (int*)0x12345678;
    printf("%d\n", *p);
}
